# jupyrator

./: README.md
.github/: dependabot.yml
.github/workflows/: apiserver-uv-lock-update.yaml  apiserver_ci.yaml  apiserver_docker_build_and_publish.yaml  controller_docker_publish.yaml  controller_unit_test.yaml  monitor_docker_publish.yaml
apiserver/: Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
apiserver/km_apiserver/: kernel_manager.py  log.py
apiserver/km_apiserver/handlers/: __init__.py  auth.py  kernel_handlers.py  schema.py
apiserver/km_apiserver/jupyter_kernel_client/: client.py  schema.py  utils.py
apiserver/km_apiserver/jupyter_kernel_client/models/: __init__.py
apiserver/km_apiserver/static/: swagger.yaml
apiserver/manifests/base/: deployment.yaml  kustomization.yaml  service.yaml
apiserver/manifests/overlays/test/: deployment.yaml
apiserver/tests/: test_jupyter_kernel_client.py
controller/: Makefile  PROJECT  README.md  go.mod  go.sum
controller/api/v1/: groupversion_info.go  kernelmanager_types.go  zz_generated.deepcopy.go
controller/cmd/: main.go
controller/config/crd/: kustomization.yaml
controller/config/default/: kustomization.yaml  metrics_service.yaml
controller/config/manager/: manager.yaml
controller/config/rbac/: kernelmanager_editor_role.yaml  kernelmanager_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
monitor/: .gitignore  Dockerfile  README.md  main.py  requirements.txt
(+10 files in other folders)
